Shingeki no Kyojin - fix hitbox
Fixes invisible table poking out over category buttons, causing much frustration.

--- a/Shingeki no Kyojin/Shingeki no Kyojin.css
+++ b/Shingeki no Kyojin/Shingeki no Kyojin.css
@@ -1,5 +1,7 @@
 /*
 Shingeki no Kyojin by Hahaido
+Modified by Valerio Lyndon
+Last update: 2023-May-21
 */
 
 @\import "https://malscraper.azurewebsites.net/covers/all/anime/presets/more";
@@ -112,6 +114,7 @@ td[class^='td']:last-child { margin-left: 100px; }
 	display: block;
 	left: 420px;
 	margin-top: -330px;
+	width: auto;
 }
 
 .table_header:first-child { display:none; }
